--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start:dev": "tsx watch src/server.ts",
+    "start": "node build/server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
-    "eslint": "8.57.0"
+    "@types/node": "22.8.4",
+    "eslint": "8.57.0",
+    "tsx": "4.19.2",
+    "typescript": "5.6.3"
   }
 }
