--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "eslint": "8.57.0",
     "tsx": "4.19.2",
     "typescript": "5.6.3"
+  },
+  "dependencies": {
+    "fastify": "5.0.0"
   }
 }
