--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,13 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.8.4",
     "eslint": "8.57.0",
+    "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.6.3"
   },
   "dependencies": {
-    "fastify": "5.0.0"
+    "dotenv": "16.4.5",
+    "fastify": "5.0.0",
+    "zod": "3.23.8"
   }
 }
