--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "9.1.0",
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.8.4",
@@ -29,6 +30,7 @@
     "vitest": "2.1.4"
   },
   "dependencies": {
+    "@fastify/jwt": "9.0.1",
     "@prisma/client": "5.21.1",
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
